Fix scrolling issue on mobile

--- a/styles/scss/site.scss
+++ b/styles/scss/site.scss
@@ -8,6 +8,7 @@
   height: 100vh;
   width: 100vw;
   background: #008282;
+  overflow: hidden;
 }
 
 .hidden {
